// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureEnabler should not show feature if is not included 1`] = `null`;

exports[`FeatureEnabler should not show feature if is not included but contain different ones 1`] = `null`;

exports[`FeatureEnabler should show feature if is included 1`] = `
<p>
  test1
</p>
`;

exports[`FeatureEnabler should show inactive component if FeatureToggle is not included 1`] = `
<p>
  testInactive
</p>
`;
